--- a/prime_resume.html
+++ b/prime_resume.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" src="/stylesheets/prime_resume.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/primeresume.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <title>Patrick Baker's Resume</title>
   </head>
